# CIR2

algo/TD.P_5/: CMakeLists.txt  README.md  main  main.cpp  output.txt  replications.py  resultat.txt
algo/TD.P_5/classes/: colis.cpp  colis.hpp  objets.cpp  objets.hpp  villes  villes.cpp  villes.hpp
algo/TD.P_5/data/: 5villes.txt  8colis40capacite.txt  p1.txt  p2.txt
algo/tp-d6/: CMakeLists.txt  main.cpp
algo/tp1_algo/: CMakeLists.txt  main.cpp
algo/tp2_algo/: CMakeLists.txt  main.cpp
algo/tp3-4_bonus/: CMakeLists.txt  main.cpp
algo/tp3_algo/: CMakeLists.txt  main.cpp
algo/tp_5-6/: CMakeLists.txt  main.cpp
info/Examples/various/copy_constructor/C++/: CMakeLists.txt
info/Examples/various/copy_constructor/C++/src/: class_test.cpp  class_test.h  copy_constructor.cpp
info/TestBoost/: CMakeLists.txt
info/class_muffin/: CMakeLists.txt  class.cpp
info/class_test/: CMakeLists.txt  class.cpp  class.h  main.cpp
info/cmake/: CMakeLists.txt
info/exemple/: CMakeLists.txt  main.cpp
info/stl/: CMakeLists.txt  main.cpp
info/tp1/: function.c  function.h  main.c
info/tp2/: CMakeLists.txt  class.cpp  class.h  exo.txt  fonctions.cpp  fonctions.h  main.cpp
info/tp3/: CMakeLists.txt  Vector.cpp  Vector.h  class.cpp  class.h  main.cpp  trajectory.cpp  trajectory.h
info/tp4/: CMakeLists.txt  circl.cpp  circl.h  main.cpp  vecteur.cpp  vecteur.h
info/tp6/: CMakeLists.txt  ex1.cpp  ex1.h  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  frac.cpp  frac.h  main.cpp
info/tp9/: CMakeLists.txt
info/vecteur/: CMakeLists.txt  ex3.cpp  ex3.h  fract.cpp  fract.h  main.cpp  vecteur.cpp  vecteur.h
projet_info/BIM/Client/: CMakeLists.txt  main.cpp
projet_info/BIM/Client/Design/: accueil.cpp  accueil.h  connexion.cpp  connexion.h  crea.cpp  crea.h  info_compt.cpp  info_compt.h  main.cpp  main.h  virement.cpp  virement.h
projet_info/BIM/Serveur/: CMakeLists.txt  main.cpp
projet_info/BIM/classes/: Client.cpp  Client.h  Compte.cpp  Compte.h
projet_info/BIM/classes/json/: json.h
projet_info/BIM/classes/socket/: Client.h  Connection.h  Message.h  Server.h  tsQueue.h
projet_info/BIM2/: README.md
projet_info/BIM2/Client/: CMakeLists.txt  database_client_1.db  database_client_3.db  main.cpp
projet_info/BIM2/Client/Design/: accueil.h  connexion.cpp  connexion.h  crea.cpp  include.h  info_compt.h  virement.cpp  virement.h
projet_info/BIM2/Serveur/: CMakeLists.txt  database_serveur.db  main.cpp
projet_info/BIM2/Serveur/Design/: banque.cpp
projet_info/BIM2/classes/helpers/: Type.h
projet_info/BIM2/classes/socket/: Client.h  Message.h  Server.h  tsQueue.h
projet_info/BIM3/Client/: database_client_1.db  database_client_2.db  database_client_3.db
projet_info/BIM3/Client/Design/: accueil.cpp  crea.h  info_compt.cpp  main.cpp  main.h
projet_info/BIM3/Serveur/: database_serveur.db
projet_info/BIM3/Serveur/Design/: banque.h
projet_info/BIM3/classes/database/: DB.h
projet_info/BIM3/classes/helpers/: Client.h  Compte.h
projet_info/BIM3/classes/socket/: Connection.h
